fixes comment icon not in view on tablet screens

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4478,7 +4478,7 @@ p {
   }
 
   .roadmap-comment-icon {
-    margin-left: 74px;
+    margin-left: 13px;
   }
 
   .nav-link {
